css styling begins - page title and link-timer sections

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <a href='' class='high-scores'>
             <p>View High Scores</p>
         </a>
-        <div class='timer'></div>
+        <div class='timer'>
+            <p>Time: 30</p>
+        </div>
     </section>
 
     <main class='questions-container'>
