Added questions.js and put an array of 10 questions in it, linked it to index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         </div>
     </main>
-
+    <script src="./assets/js/questions.js"></script>
     <script src="./assets/js/script.js"></script>
     
 </body>
