changed direction, added separate html pages linking to each other, began styling

--- a/quiz.html
+++ b/quiz.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timed Quiz: javaScript-beginner</title>
+    <title>Quiz</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <header class='page-top'>
-        <h1 class='page-title'>Timed Quiz: javaScript-beginner</h1>
+        <h1 class='page-title'></h1>
     </header>
     <section class='link-timer'>
-        <a href='' class='high-scores'>
+        <a href="highScores.html" class='high-scores'>
             <p>View High Scores</p>
         </a>
         <div class='timer'>
-            <p>Time: 30</p>
+            <p>Time: 60</p>
         </div>
     </section>
 
@@ -30,15 +30,9 @@
         <div class='response'>
 
         </div>
-        <p class='intro'>
-            Welcome to Timed Quiz: javaScript beginner. You will have 1 minute to answer 10 questions. Click the button below to begin!
-        </p>
-        <a href="quiz.html">
-        <button type="submit" class='start'>Start Quiz</button>
-        </a>
     </main>
     <script src="./assets/js/questions.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/quiz.js"></script>
     
 </body>
 </html>
