added javaScript to quiz page with online help from Brian Design video on youtube. It basically functions at this point, needs styling and more tweaks to meet criteria

--- a/quiz.html
+++ b/quiz.html
@@ -20,11 +20,22 @@
         </div>
     </section>
 
-    <main class='questions-container'>
-        <div class='bold-question'>
+    <section class='user-info'>
+        <h2 class='score'>0</h2>
+        <p class='progress-text'></p>
+    </section>
 
-        </div>
+    <main class='questions-container'>
+        <h1 class='bold-question'>
+
+        </h1>
         <div class='answer-choices'>
+            <ul class='answer-list'>
+                <li class='choice' data-number="1"></li>
+                <li class='choice' data-number="2"></li>
+                <li class='choice' data-number="3"></li>
+                <li class='choice' data-number="4"></li>
+            </ul>
 
         </div>
         <div class='response'>
