styled home page and quiz page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p class='intro'>
             Welcome to Timed Quiz: javaScript beginner. You will have 1 minute to answer 10 questions. Click the button below to begin!
         </p>
-        <a href="quiz.html">
+        <a class='button-link' href="quiz.html">
         <button type="submit" class='start'>Start Quiz</button>
         </a>
     </main>
