--- a/quiz.html
+++ b/quiz.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class='page-top'>
-        <h1 class='page-title'></h1>
+        <h1 class='page-title'>Quiz</h1>
     </header>
     <section class='link-timer'>
         <a href="highScores.html" class='high-scores'>
@@ -30,12 +30,12 @@
 
         </h1>
         <div class='answer-choices'>
-            <ul class='answer-list'>
-                <li class='choice' data-number="1"></li>
-                <li class='choice' data-number="2"></li>
-                <li class='choice' data-number="3"></li>
-                <li class='choice' data-number="4"></li>
-            </ul>
+            <div class='answer-list'>
+                <button class='choice' type="button" data-number="1"></button>
+                <button class='choice' type="button" data-number="2"></button>
+                <button class='choice' type="button" data-number="3"></button>
+                <button class='choice' type="button" data-number="4"></button>
+            </div>
 
         </div>
         <div class='response'>
