timer functions correctly and ends game when it reaches 0, made a few other small tweaks to game play and appearance

--- a/quiz.html
+++ b/quiz.html
@@ -16,12 +16,12 @@
             <p>View High Scores</p>
         </a>
         <div class='timer'>
-            <p>Time: 60</p>
+            <p class="time"></p>
         </div>
     </section>
 
     <section class='user-info'>
-        <h2 class='score'>0</h2>
+        <h2 class='score'></h2>
         <p class='progress-text'></p>
     </section>
 
