finalizing and styling end page

--- a/end.html
+++ b/end.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz Complete</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <header class='page-top'>
+        <h1 class='page-title'>Quiz Complete</h1>
+    </header>
     <main class="user-info">
         <h2 class="score"></h2>
-        <input type="text" class="initials" max="3">
+        <input type="text" class="initials" maxlength="13" placeholder="Enter Name">
         <button class='save-button'>Save</button>
     </main>
 
