--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <h1 class='page-title'>Timed Quiz: javaScript-beginner</h1>
     </header>
     <section class='link-timer'>
-        <a href='' class='high-scores'>
+        <a href='./highScores.html' class='high-scores'>
             <p>View High Scores</p>
         </a>
         <div class='timer'>
-            <p>Time: 30</p>
+            <p>Time: 60</p>
         </div>
     </section>
 
@@ -31,7 +31,7 @@
 
         </div>
         <p class='intro'>
-            Welcome to Timed Quiz: javaScript beginner. You will have 1 minute to answer 10 questions. Click the button below to begin!
+            Welcome to Timed Quiz: javaScript beginner. You will have 1 minute to answer 10 questions. The time remaining will be reduced by 2 seconds for each incorrect response. The time remaining at the end of the quiz will be added to your final score. Click the button below to begin!
         </p>
         <a class='button-link' href="quiz.html">
         <button type="submit" class='start'>Start Quiz</button>
