--- a/quiz.html
+++ b/quiz.html
@@ -12,7 +12,7 @@
         <h1 class='page-title'>Quiz</h1>
     </header>
     <section class='link-timer'>
-        <a href="highScores.html" class='high-scores'>
+        <a href="./highScores.html" class='high-scores'>
             <p>View High Scores</p>
         </a>
         <div class='timer'>
