all pages look and function as intended. finalized styling and tested

--- a/end.html
+++ b/end.html
@@ -13,6 +13,7 @@
     </header>
     <main class="user-info">
         <h2 class="score"></h2>
+        <p class="name">Enter your name below to save your score!</p>
         <input type="text" class="initials" maxlength="13" placeholder="Enter Name">
         <button class='save-button'>Save</button>
     </main>
@@ -21,9 +22,9 @@
 
     
     <div class='link-buttons'>
-        <a href="quiz.html"><button class='btn'type='Click'>Play Again</button></a>
-        <a href="highScores.html"><button class='btn'type='Click'>High Scores</button></a>
-        <a href="index.html"><button class='btn'type='Click'>Home</button></a>
+        <a href="quiz.html"><button class='end-btn'type='Click'>Play Again</button></a>
+        <a href="highScores.html"><button class='end-btn'type='Click'>High Scores</button></a>
+        <a href="index.html"><button class='end-btn'type='Click'>Home</button></a>
 
     </div>
     <script src="./assets/js/end.js"></script>
