--- a/highScores.html
+++ b/highScores.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <header class='page-top'>
+        <h1 class='page-title'>Leader Board</h1>
+    </header>
     <main class='scores'>
-        <h1 class='score-heading'>Leader Board</h1>
+        <h1 class='score-heading'></h1>
         <ol class='score-list'>
 
         </ol>
