--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>View High Scores</p>
         </a>
         <div class='timer'>
-            <p>Time: 60</p>
+            <h2>Time: 60</h2>
         </div>
     </section>
 
