--- a/quiz.html
+++ b/quiz.html
@@ -16,7 +16,7 @@
             <p>View High Scores</p>
         </a>
         <div class='timer'>
-            <p class="time"></p>
+            <h2 class="time"></h2>
         </div>
     </section>
 
