added red and green highlights to question element to signal correct or incorrect, added some comments to html, final tested

--- a/end.html
+++ b/end.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <!-- Main heading for page-->
     <header class='page-top'>
         <h1 class='page-title'>Quiz Complete</h1>
     </header>
+    <!-- gives user their score and prompts them to enter name and save-->
     <main class="user-info">
         <h2 class="score"></h2>
         <p class="name">Enter your name below to save your score!</p>
@@ -20,7 +22,7 @@
 
     
 
-    
+    <!-- nav section-->
     <div class='link-buttons'>
         <a href="quiz.html"><button class='end-btn'type='Click'>Play Again</button></a>
         <a href="highScores.html"><button class='end-btn'type='Click'>High Scores</button></a>
