--- a/highScores.html
+++ b/highScores.html
@@ -8,14 +8,17 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <!-- Main heading for page-->
     <header class='page-top'>
         <h1 class='page-title'>Leader Board</h1>
     </header>
+    <!-- high scores list which persists in browser localStorage-->
     <main class='scores'>
         <h1 class='score-heading'></h1>
         <ol class='score-list'>
 
         </ol>
+        <!-- nav section-->
         <div class='link-buttons'>
             <a href="quiz.html"><button class='btn'type='Click'>Play Again</button></a>
             <a href="index.html"><button class='btn'type='Click'>Home</button></a>
