--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <!--Main Heading-->
     <header class='page-top'>
         <h1 class='page-title'>Timed Quiz: javaScript-beginner</h1>
     </header>
+    <!--Nav Section-->
     <section class='link-timer'>
         <a href='./highScores.html' class='high-scores'>
             <p>View High Scores</p>
@@ -30,9 +32,11 @@
         <div class='response'>
 
         </div>
+        <!--Instructions for the quiz-->
         <p class='intro'>
             Welcome to Timed Quiz: javaScript beginner. You will have 1 minute to answer 10 questions. The time remaining will be reduced by 2 seconds for each incorrect response. The time remaining at the end of the quiz will be added to your final score. Click the button below to begin!
         </p>
+        <!--Button to start quiz-->
         <a class='button-link' href="quiz.html">
         <button type="submit" class='start'>Start Quiz</button>
         </a>
