--- a/quiz.html
+++ b/quiz.html
@@ -8,18 +8,21 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <!--Main page heading-->
     <header class='page-top'>
         <h1 class='page-title'>Quiz</h1>
     </header>
+    <!-- High Scores Navigation-->
     <section class='link-timer'>
         <a href="./highScores.html" class='high-scores'>
             <p>View High Scores</p>
         </a>
+        <!-- functioning quiz timer-->
         <div class='timer'>
             <h2 class="time"></h2>
         </div>
     </section>
-
+    <!--Tells user their score and where they are in the quiz-->
     <section class='user-info'>
         <h2 class='score'></h2>
         <p class='progress-text'></p>
@@ -27,14 +30,24 @@
 
     <main class='questions-container'>
         <h1 class='bold-question'>
+            <!-- questions appear here-->
 
         </h1>
+        <!-- answer choices fill in on these buttons-->
         <div class='answer-choices'>
             <div class='answer-list'>
-                <button class='choice' type="button" data-number="1"></button>
-                <button class='choice' type="button" data-number="2"></button>
-                <button class='choice' type="button" data-number="3"></button>
-                <button class='choice' type="button" data-number="4"></button>
+                <div class='choice-container'>
+                    <button class='choice' type="button" data-number="1"></button>
+                </div>
+                <div class='choice-container'>
+                    <button class='choice' type="button" data-number="2"></button>
+                </div>
+                <div class='choice-container'>
+                    <button class='choice' type="button" data-number="3"></button>
+                </div>
+                <div class='choice-container'>
+                    <button class='choice' type="button" data-number="4"></button>
+                </div>
             </div>
 
         </div>
